css/source/navigation.scss
// hidden windows, can be triggered to be shown

.hidden-window {
    position: fixed; top: 0; left: 0; z-index: 9998;
    width: 100%; height: 100%;
    overflow: hidden;

    > * {
        position: absolute; top: 0; left: 0;
        width: 100%; height: 100%;
        @include transition(.4s);

        &.red {
            z-index: 1;
            background-color: $bauhaus-red;
        }

        &.blue {
            z-index: 2;
            background-color: $bauhaus-blue;
            @include transition-delay(.06s);
        }

        &.orange {
            z-index: 3;
            background-color: $bauhaus-orange;
            @include transition-delay(.11s);
        }

        &.green {
            z-index: 4;
            background-color: $bauhaus-green;
            @include transition-delay(.15s);
        }

        &.content {
            z-index: 5;
            background-color: white;
            @include transition-delay(.18s);
            
            .container {
                position: absolute; top: 0; left: 50%;
                max-width: $max-width; width: 100%; height: 100%;
                @include transform(translate(-50%,0));
            }

            .cross {
                position: absolute; top: 15px; right: 15px; z-index: 2;
            }

            .center {
                display: inline-block; position: absolute; top: 50%; left: 50%; z-index: 1;
                max-width: 300px; width: 100%; padding: 15px;
                text-align: center;
                @include transform(translate(-50%,-50%));
            }
        }
    }

    &.hidden {
        top: -5px;
        width: 0; height: 0;
        @include transition(0s .7s);

        > * {
            @include transform(translate(0, -100%));

            &.red     {@include transition-delay(.00625s);}
            &.blue    {@include transition-delay(.0125s);}
            &.orange  {@include transition-delay(.025s);}
            &.green   {@include transition-delay(.05s);}
            &.content {@include transition-delay(0s);}
        }
    }
    
}

.cross {
    position: relative; width: 44px; height: 44px;
    @include transition(.1s);
    
    &:before, &:after {
        content: '';
        position: absolute; top: 44%; left: 0;
        width: 100%; height: 12%;
        background-color: #6d6d6d;
        @include border-radius(5px);
        @include transition(.2s);
    }
    
    &:before {
        @include transform(rotate(45deg));
    }
    
    &:after {
        @include transform(rotate(-45deg));
    }
    
    &:hover {
        &:before {
            @include transform(rotate(40deg));
        }
        &:after {
            @include transform(rotate(-40deg));
        }
    }
    
    &:active {
        &:before, &:after {
            left: 10%;
            width: 80%;
        }
    }
}
/* ... */

